Added code to support the company db